[gd_scene load_steps=6 format=3 uid="uid://cj4g2jrd1h0c4"]

[ext_resource type="Script" uid="uid://dw8o1l1teuwy3" path="res://Entities/Objects/Sign/sign.gd" id="1_ns05d"]
[ext_resource type="Texture2D" uid="uid://clae63xq4uiej" path="res://Environment/other/sign.png" id="2_ns05d"]
[ext_resource type="FontFile" uid="uid://dqvm3dhpo7ybc" path="res://Qager-zrlmw.ttf" id="3_mxpqh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxpqh"]
size = Vector2(127, 121.5)

[sub_resource type="LabelSettings" id="LabelSettings_7ujbs"]
font = ExtResource("3_mxpqh")

[node name="Sign" type="Node2D"]
script = ExtResource("1_ns05d")

[node name="InteractionBox" type="Area2D" parent="."]
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionBox"]
position = Vector2(0, 0.25)
shape = SubResource("RectangleShape2D_mxpqh")

[node name="Sign" type="Sprite2D" parent="."]
position = Vector2(0, 45)
texture = ExtResource("2_ns05d")

[node name="Label" type="Label" parent="."]
offset_left = -202.0
offset_top = -41.0
offset_right = 202.0
offset_bottom = -18.0
text = "Press Z to attack!"
label_settings = SubResource("LabelSettings_7ujbs")
horizontal_alignment = 1

[node name="TypingTimer" type="Timer" parent="."]

[connection signal="body_entered" from="InteractionBox" to="." method="_on_interaction_box_body_entered"]
[connection signal="body_exited" from="InteractionBox" to="." method="_on_interaction_box_body_exited"]
